# bpmn-parser

./: .editorconfig  .gitignore  Cargo.toml  README.md  TODO  file.bpmd  file.bpmn  justfile
doc/: build.sh  doc.adoc  doc.html  easiest.xml  gateway.bpmd  intermediate-events.bpmd  package.json  sequenceflow.bpmd
doc/test/: .gitignore  ERR0001.bpmd  be0001.bpmd  be0002.bpmd  be0003.bpmd  be0004.bpmd  be0005.bpmd  be0006.bpmd  be0007.bpmd  be0008.bpmd  be0009.bpmd  be0010.bpmd  be0011.bpmd  be0012.bpmd  be0013.bpmd  be0014.bpmd  build.sh  compiled.adoc  er0001.bpmd  er0002.bpmd  er0003.bpmd  g0001.bpmd  g0002.bpmd  g0003.bpmd  g0004.bpmd  g0005.bpmd  g0006.bpmd  g0007.bpmd  g0008.bpmd  g0009.bpmd  g0010.bpmd  g0011.bpmd  g0012.bpmd  g0013.bpmd  g0014.bpmd  pe0001.bpmd  pe0001.csv  pe0001.csv.correct  pe0002.bpmd  pe0003.bpmd  (+44 more)
doc2/: doc.adoc  doc.html  easiest.bpmd  gateway.bpmd  package-lock.json  pe-bpmn.adoc  pools.bpmd  sequenceflow.bpmd
docs-site/: antora.yml  compile-bpmd.sh
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
real_world_bpmn_examples/: BPMN-model-warehouse-process.txt  camunda_ref1.bpmd
src/: main.rs  node_id_matcher.rs  parser.rs  pool_id_matcher.rs  to_xml.rs
src/analysis/: mod.rs
src/common/: bpmn_node.rs  config.rs  edge.rs  graph.rs  iter_ext.rs  lane.rs  (+4 more)
test_input/: gateway_1_datanode.txt  insurance_claim.txt  mortgage_assessment.txt  multiple_gateways_datanodes.txt  order_process.txt  pleak_mpc.txt  refund.txt
thoughtmatter/: boundary_events.bpmn  gateway_support_stuff.bpmn  input_port_ordering.drawio  port_ordering.bpmn
(+41 files in other folders)
