cargo-features = ["profile-rustflags", "codegen-backend"]

[package]
name = "bpmn-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
good_lp = { version = "1", features = [
    #"microlp",
    "scip",
], default-features = false }
svg = "0.18"
annotate-snippets = "0.12"
itertools = {version = "0", features = ["use_alloc"]}
rustc-hash = {version = "2", default-features = false }
fuzzy-matcher = "0.3.7"
csv = "1.3.1"
vecset = "0.0.3"
proc_macros = { path = "./proc_macros" }

[profile.test]
rustflags = ["-Adead_code", "-Aunused_variables", "-Aunused_imports"]

[profile.nightly]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
codegen-backend = "cranelift"
